# ai-avataar

./: .dockerignore  .env.example  .gitattributes  .gitignore  BACKLOG.md  Dockerfile  KG_INGESTION_EXPLAINED.md  README.md  pyproject.toml  railway.json  spec.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  career_qa.py  catalog.py  cli.py  context.py  deep_dive.py  figures.py  generate.py  graph.py  guardrail.py  persona.md  profile.py  prompts.py  recruiter_mode.py  refuse.py  retrieve.py  router.py  runner.py  state.py
app/api/: schemas.py
app/api/routes/: chat.py  health.py  images.py
app/core/: assets.py  gemini.py  logging.py  openai_client.py  tracing.py
app/ingestion/: __init__.py  sources.py
app/ingestion/graph/: __init__.py  cypher.py  extractor.py  loader.py  pipeline.py  resolver.py  schema.py
app/ingestion/vector/: __init__.py  chunker.py  embedder.py  images.py  parser.py  pipeline.py  retag_narrative.py  schema.py  store.py  tokens.py
app/retrieval/: __init__.py  cli.py  graph.py  schema.py  vector.py
docker/: Dockerfile  docker-compose.local.yml
docs/: .gitkeep  agentic-system-explained.md
evals/: .gitkeep  README.md  build_review.py  dataset.jsonl  issues-and-plan.md  review-full-baseline-2026-07-15.md  run_experiment.py  upload_to_langfuse.py
scripts/: migrate_image_assets.py
tests/: test_api.py
