[project]
name = "ai-avatar"
version = "0.1.0"
description = "AI Avatar — Personal RAG + Agent System (hybrid GraphRAG career assistant)"
authors = [{ name = "Aniket Gaudgaul" }]
readme = "README.md"
requires-python = ">=3.11"

# Core runtime dependencies. Versions are loose lower-bounds so pip can resolve
# wheels compatible with the installed interpreter (Python 3.14 here).
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "tenacity>=9.0",
    "python-json-logger>=2.0",
    # LLM + embeddings (Gemini via the unified Google GenAI SDK)
    "google-genai>=0.3",
    # Agent orchestration
    "langgraph>=0.2",
    "langchain-core>=0.3",
    # Document parsing (vector path) — LlamaParse v2 SDK
    "llama-cloud>=2.0",
    # Stores
    "qdrant-client>=1.14",
    "neo4j>=5.20",
    # Sparse retrieval — BM25 sparse vectors via Qdrant/fastembed (server-native
    # hybrid + RRF fusion, not hand-rolled). Replaces the rank_bm25 + manual RRF
    # the spec originally assumed.
    "fastembed>=0.8",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Evaluation / red-teaming stack (Phase B). Kept optional so the core app
# installs fast and stays deployable without the heavy eval deps.
evals = [
    "ragas>=0.2",
    "deepeval>=1.0",
]
# Local dev tooling
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
