[project]
name = "ai-avatar"
version = "0.1.0"
description = "AI Avatar — Personal RAG + Agent System (hybrid GraphRAG career assistant)"
authors = [{ name = "Aniket Gaudgaul" }]
readme = "README.md"
requires-python = ">=3.11"

# Runtime dependencies — exactly what serving a request needs, nothing more.
# This set is what the deployed container installs, so anything used only to
# *build* the index belongs in the `ingest` extra below, not here.
# Versions are loose lower-bounds so pip can resolve wheels compatible with the
# installed interpreter (Python 3.14 on the dev box, 3.12 in the container).
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "tenacity>=9.0",
    "python-json-logger>=2.0",
    # LLM + embeddings (Gemini via the unified Google GenAI SDK). Embeddings are
    # always Gemini; generation is provider-switchable (see settings.llm_provider).
    "google-genai>=0.3",
    # Generation backend when llm_provider="openai" (GPT-5.x reasoning models via
    # the Responses API). Needs a recent SDK for responses.parse structured output.
    "openai>=1.66",
    # Agent orchestration
    "langgraph>=0.2",
    "langchain-core>=0.3",
    # Observability / tracing (Langfuse v4, OpenTelemetry-based). Decorator +
    # OTel-context instrumentation — no langchain callback handler, so no heavy
    # `langchain` dependency is pulled in.
    "langfuse>=4.13",
    # Stores
    "qdrant-client>=1.14",
    "neo4j>=5.20",
    # Sparse retrieval. Despite the "server-side BM25" framing, qdrant-client
    # embeds `Document(model="Qdrant/bm25")` **client-side** via fastembed before
    # sending the query — verified: importing app.main loads fastembed and
    # onnxruntime. So this is a query-time dependency and cannot move to `ingest`.
    "fastembed>=0.8",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Index-building only. The container never imports these: `app.main` reaches
# neither `llama_cloud` nor `resvg_py` (only `ingestion/vector/parser.py` does,
# and serving never imports it). Keeping them out of the runtime image cuts its
# size and cold-start, which matters on a free-tier host that scales to zero.
#     pip install -e ".[ingest]"     # dev box, to run the pipelines
ingest = [
    # Document parsing (vector path) — LlamaParse v2 SDK
    "llama-cloud>=2.0",
    # SVG rasterisation: Gemini Embedding 2 rejects image/svg+xml (400 "Provided
    # image is not valid"), so authored .svg diagrams are rendered to PNG before
    # embedding. resvg-py is a prebuilt Rust wheel — no cairo/C toolchain, which
    # matters on the Python-3.14 dev box.
    "resvg-py>=0.3",
]
# Evaluation / red-teaming stack (Phase B). Kept optional so the core app
# installs fast and stays deployable without the heavy eval deps.
evals = [
    "ragas>=0.2",
    "deepeval>=1.0",
]
# Local dev tooling
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
